--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@faker-js/faker": "^8.0.2",
     "dotenv": "^16.3.1",
+    "figlet": "^1.6.0",
     "inquirer": "^8.2.6",
     "node-appwrite": "^9.0.0",
     "progress": "^2.0.3"
