--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "appwrite-faker",
-  "version": "1.0.0",
-  "description": "Generates an entire project of fake data for testing purposes for Appwrite",
+  "name": "appwrite-toolkit",
+  "version": "1.0.3",
+  "description": "A suite of tools to aid in the development of Appwrite.",
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
@@ -17,14 +17,18 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/PineappleIOnic/appwrite-faker.git"
+    "url": "git+https://github.com/PineappleIOnic/appwrite-toolkit.git"
+  },
+  "engines" : { 
+    "npm" : ">=8.0.0",
+    "node" : ">=18.0.0"
   },
   "author": "Bradley Schofield (bradley@appwrite.io)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/PineappleIOnic/appwrite-faker/issues"
+    "url": "https://github.com/PineappleIOnic/appwrite-toolkit/issues"
   },
-  "homepage": "https://github.com/PineappleIOnic/appwrite-faker#readme",
+  "homepage": "https://github.com/PineappleIOnic/appwrite-toolkit#readme",
   "dependencies": {
     "@faker-js/faker": "^8.0.2",
     "dotenv": "^16.3.1",
