--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
+    "faker-auto": "node src/index.js faker-auto",
     "test": "echo \"Error: no test specified\"",
     "lint": "eslint .",
     "format": "npx eslint --fix ."
@@ -19,9 +20,9 @@
     "type": "git",
     "url": "git+https://github.com/PineappleIOnic/appwrite-toolkit.git"
   },
-  "engines" : { 
-    "npm" : ">=8.0.0",
-    "node" : ">=18.0.0"
+  "engines": {
+    "npm": ">=8.0.0",
+    "node": ">=18.0.0"
   },
   "author": "Bradley Schofield (bradley@appwrite.io)",
   "license": "MIT",
@@ -35,7 +36,7 @@
     "figlet": "^1.6.0",
     "inquirer": "^8.2.6",
     "inquirer-tree-prompt": "^1.1.2",
-    "node-appwrite": "^9.0.0",
+    "node-appwrite": "^11.0.0",
     "progress": "^2.0.3"
   }
 }
